--- a/.github/workflows/nv-pre-compile-ops.yml
+++ b/.github/workflows/nv-pre-compile-ops.yml
@@ -18,7 +18,7 @@ jobs:
   build-ops:
     runs-on: ubuntu-20.04
     container:
-      image: deepspeed/gh-builder:py3.8-torch112-cu116
+      image: deepspeed/gh-builder:ubuntu1804-py38-torch1131-cu116
 
     steps:
         - uses: actions/checkout@v2
@@ -28,10 +28,10 @@ jobs:
             which python
             python --version
             python -c "import torch; print('torch:', torch.__version__, torch)"
-            python -c "import torch; print('CUDA available:', torch.cuda.is_available())"
+            #python -c "import torch; print('CUDA available:', torch.cuda.is_available())"
         - name: Compile DeepSpeed Ops
           run: |
-            DS_BUILD_OPS=1 DS_BUILD_SPARSE_ATTN=0 pip3 install .
+            TORCH_CUDA_ARCH_LIST="7.0;7.5;8.0" DS_BUILD_OPS=1 DS_BUILD_SPARSE_ATTN=0 pip3 install .
         - name: DS Report
           run: |
              ds_report
