--- a/.github/workflows/nv-lightning-v100.yml
+++ b/.github/workflows/nv-lightning-v100.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Install deepspeed
         run: |
-          pip install six
+          pip install six regex
           pip install .[dev,autotuning]
           ds_report
 
