--- a/.github/workflows/nv-transformers-v100.yml
+++ b/.github/workflows/nv-transformers-v100.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Install deepspeed
         run: |
-          pip install six
+          pip install six regex
           pip install .[dev,autotuning]
           ds_report
 
