--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -2,7 +2,7 @@ clang-format==16.0.2
 docutils<0.18
 future
 importlib-metadata>=4
-megatron-lm @ git+https://github.com/NVIDIA/Megatron-LM.git@3860e995269df61d234ed910d4756e104e1ab844
+megatron-lm @ git+https://github.com/NVIDIA/Megatron-LM.git@v2.5
 pre-commit>=2.20.0
 pytest
 pytest-forked
