--- a/.github/workflows/cpu-inference.yml
+++ b/.github/workflows/cpu-inference.yml
@@ -40,9 +40,7 @@ jobs:
 
       - name: Install oneCCL Bindings for PyTorch
         run: |
-          #python -m pip install intel_extension_for_pytorch
-          # temporary wheel to test the fix for AVX2 instruction set detection
-          python -m pip install intel_extension_for_pytorch==2.0 -f https://developer.intel.com/ipex-whl-stable-cpu
+          python -m pip install intel_extension_for_pytorch
           python -m pip install oneccl_bind_pt==2.0 -f https://developer.intel.com/ipex-whl-stable-cpu
 
       - name: Install transformers
