--- a/.github/workflows/cpu-inference.yml
+++ b/.github/workflows/cpu-inference.yml
@@ -43,6 +43,18 @@ jobs:
           python -m pip install intel_extension_for_pytorch
           python -m pip install oneccl_bind_pt==2.0 -f https://developer.intel.com/ipex-whl-stable-cpu
 
+      - name: Install oneCCL binding for PyTorch
+        run: |
+          git clone https://github.com/oneapi-src/oneCCL
+          cd oneCCL
+          mkdir build
+          cd build
+          cmake ..
+          make -j install
+          source ./env/setvars.sh
+          # test whether oneCCL is correctly installed
+          mpirun -n 2 ./examples/benchmark/benchmark
+
       - name: Install transformers
         run: |
           git clone https://github.com/huggingface/transformers
