Add non-interactive prompt, causing issues for some users

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM nvidia/cuda:10.0-devel-ubuntu18.04
 
+ENV DEBIAN_FRONTEND noninteractive
+
 ##############################################################################
 # Temporary Installation Directory
 ##############################################################################
