--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -32,7 +32,15 @@ jobs:
       - name: Load docker image
         run: |
           sudo docker run --rm --gpus all nvcr.io/nvidia/pytorch:23.03-py3
-          sudo apt install -y libaio-dev ninja-build
+
+      - id: setup-venv
+        uses: ./.github/workflows/setup-venv
+
+      - name: Install pytorch
+        run: |
+          python3 -m pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu117
+          python3 -c "import torch; print('torch:', torch.__version__, torch)"
+          python3 -c "import torch; print('CUDA available:', torch.cuda.is_available())"
 
       - name: Install transformers
         run: |
