--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -58,5 +58,5 @@ jobs:
           unset TORCH_CUDA_ARCH_LIST # only jit compile for current arch
           if [[ -d ./torch-extensions ]]; then rm -rf ./torch-extensions; fi
           cd tests
-          TORCH_EXTENSIONS_DIR=./torch-extensions python3 -m pytest -x --forked -n 4  unit/ --torch_ver="2.0" --cuda_ver="11"
-          TORCH_EXTENSIONS_DIR=./torch-extensions python3 -m pytest -x --forked -m 'sequential' unit/ --torch_ver="2.0" --cuda_ver="11"
+          TORCH_EXTENSIONS_DIR=./torch-extensions python3 -m pytest --forked -n 4  unit/ --torch_ver="2.0" --cuda_ver="11"
+          TORCH_EXTENSIONS_DIR=./torch-extensions python3 -m pytest --forked -m 'sequential' unit/ --torch_ver="2.0" --cuda_ver="11"
