--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -35,6 +35,12 @@ jobs:
           sudo apt install -y libaio-dev ninja-build
           python3 -c "import torch; print('torch:', torch.__version__, torch)"
 
+      - name: Install pytorch
+        run: |
+          python3 -m pip install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cu12
+          python3 -c "import torch; print('torch:', torch.__version__, torch)"
+          python3 -c "import torch; print('CUDA available:', torch.cuda.is_available())"
+
       - name: Install transformers
         run: |
           git clone https://github.com/huggingface/transformers
