--- a/.github/workflows/amd-mi200.yml
+++ b/.github/workflows/amd-mi200.yml
@@ -74,8 +74,9 @@ jobs:
       # $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
       - name: Open GitHub issue if nightly CI fails
         if: failure()
+        uses: actions/checkout@v3
         uses: JasonEtco/create-an-issue@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          filename: ../.github/ISSUE_TEMPLATE/ci_failure_report.md
+          filename: .github/ISSUE_TEMPLATE/ci_failure_report.md
