--- a/.github/workflows/amd-mi200.yml
+++ b/.github/workflows/amd-mi200.yml
@@ -77,5 +77,5 @@ jobs:
         uses: JasonEtco/create-an-issue@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          filename: $(( $GITHUB_WORKSPACE }}/.github/ISSUE_TEMPLATE/ci_failure_report.md
+        #with:
+        #  filename: $(( $GITHUB_WORKSPACE }}/.github/ISSUE_TEMPLATE/ci_failure_report.md
