--- a/.github/workflows/amd-mi200.yml
+++ b/.github/workflows/amd-mi200.yml
@@ -72,6 +72,7 @@ jobs:
           pytest $PYTEST_OPTS -m 'sequential' unit/
 
       - name: Test pwd
+        if: failure()
         run: |
           pwd
           cd ../
