--- a/.github/workflows/nv-torch-nightly-v100.yml
+++ b/.github/workflows/nv-torch-nightly-v100.yml
@@ -53,10 +53,5 @@ jobs:
           pytest $PYTEST_OPTS --forked -n 4 unit/
           pytest $PYTEST_OPTS --forked -m 'sequential' unit/
 
-      - name: Open GitHub issue if nightly CI fails
-        if: failure()
-        uses: JasonEtco/create-an-issue@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          filename: .github/ISSUE_TEMPLATE/ci_failure_report.md
+      - id: open-issue-on-fail
+        uses: ./.github/workflows/open-issue-on-fail
