--- a/.github/workflows/nv-inference.yml
+++ b/.github/workflows/nv-inference.yml
@@ -39,8 +39,7 @@ jobs:
 
       - name: Install deepspeed
         run: |
-          pip install diffusers
-          pip install .[dev,1bit,autotuning,inf,triton]
+          pip install .[dev,1bit,autotuning,inf,triton,sd]
           ds_report
 
       - name: Python environment
