--- a/.github/workflows/nv-inference.yml
+++ b/.github/workflows/nv-inference.yml
@@ -39,7 +39,8 @@ jobs:
 
       - name: Install deepspeed
         run: |
-          pip install .[dev,1bit,autotuning,inf,triton,sd]
+          pip install diffusers
+          pip install .[dev,1bit,autotuning,inf,triton]
           ds_report
 
       - name: Python environment
