--- a/.github/workflows/nv-mii.yml
+++ b/.github/workflows/nv-mii.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: MII unit tests
         run: |
-          BRANCH="main"
+          BRANCH="loadams/remove-transformers-conversation"
           if [[ ! -z "${{ github.event.inputs.mii_branch }}" ]]; then
               BRANCH="${{ github.event.inputs.mii_branch }}"
           fi
