--- a/.github/workflows/xpu-max1100.yml
+++ b/.github/workflows/xpu-max1100.yml
@@ -42,7 +42,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install prerequisite
-      shell: bash
       run: |
         apt-get update
         apt-get install clinfo libaio-dev python3-pip -y
@@ -52,11 +51,9 @@ jobs:
         pip install oneccl_bind_pt==2.1.300+xpu -f https://developer.intel.com/ipex-whl-stable-xpu
         pip install torchvision==0.16.0.post2 -f https://developer.intel.com/ipex-whl-stable-xpu
         pip install py-cpuinfo pytest pytest-timeout tabulate tensorboard wandb transformers accelerate comet_ml mup numpy==1.26
-        python3 setup.py bdist_wheel
-        pip install dist/*.whl
+        pip install .[dev,autotuning]
 
     - name: Check container state
-      shell: bash
       run: |
         ldd --version
         ds_report
@@ -66,7 +63,6 @@ jobs:
         pip list
 
     - name: Unit tests
-      shell: bash
       run: |
         cd tests/unit
         pytest --verbose accelerator/*
