--- a/.github/workflows/xpu-max1100.yml
+++ b/.github/workflows/xpu-max1100.yml
@@ -52,7 +52,7 @@ jobs:
         pip install intel-extension-for-pytorch-deepspeed==2.1.30 -f https://developer.intel.com/ipex-whl-stable-xpu
         pip install oneccl_bind_pt==2.1.300+xpu -f https://developer.intel.com/ipex-whl-stable-xpu
         pip install torchvision==0.16.0.post2 -f https://developer.intel.com/ipex-whl-stable-xpu
-        pip install py-cpuinfo pytest pytest-timeout tabulate tensorboard wandb transformers accelerate comet_ml mup numpy==1.26
+        pip install py-cpuinfo numpy==1.26
         pip install .[dev,autotuning]
 
     - name: Check container state
@@ -74,10 +74,8 @@ jobs:
         pytest --verbose checkpoint/test_shared_weights.py
         pytest --verbose launcher/test_ds_arguments.py launcher/test_run.py
         pytest --verbose model_parallelism/*
-        pytest --verbose moe/*
+        pytest --verbose moe/test_moe_tp.py
         pytest --verbose monitor/*
-        pytest --verbose pipe/*
-        pytest --verbose profiling/flops_profiler/*
         pytest --verbose utils/*
         pytest --verbose runtime/test_ds_config_model.py
         pytest --verbose runtime/pipe/test_pipe_schedule.py
